--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -72,6 +72,7 @@ jobs:
   macos:
     runs-on: macos-14
     name: macos-test
+    if: false
 
     steps:
       - name: Install prerequisite MacOS packages
