--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -55,6 +55,14 @@ jobs:
         with:
           fetch-depth: ${{ env.CHECKOUT_FETCH_DEPTH }}
 
+      - name: setup ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          max-size: "128M" # default 500M
+          verbose: 2 # default 0
+          append-timestamp: false
+          create-symlink: true
+
       - name: Run build test
         id: test
         run: ./test-builds.sh --verbose --use-config-cache ${{ matrix.layer.name }}
