--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -42,6 +42,12 @@ jobs:
         with:
           fetch-depth: ${{ env.CHECKOUT_FETCH_DEPTH }}
 
+      - name: setup ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          verbose: 2 # default 0
+          append-timestamp: false
+
       - run: ./bootstrap.sh
       - run: ./configure --with-openssl
       - run: make -j`nproc`
