configure.ac: use AC_CHECK_TOOL for ar
Use AC_CHECK_TOOL which checks the environment variable `$AR` as well, which
is useful for us in Gentoo when cross-compiling.

We could use AC_PROG_AR in newer autoconf or AM_PROG_AR in automake but
the AR_R use is hardcoded in a bunch of places so not worth it.

Bug: https://bugs.gentoo.org/911945

--- a/configure.ac
+++ b/configure.ac
@@ -129,7 +129,7 @@ AS_IF([test "x$ac_cv_path_PERL" = "xnone"],[
 AC_PATH_PROG(POD2MAN, pod2man, $FALSE)
 AM_CONDITIONAL(ENABLE_POD2MAN_DOC, test "x${ac_cv_path_POD2MAN}" != "x$FALSE")
 
-AC_PATH_PROG(AR, ar, $FALSE)
+AC_CHECK_TOOL(AR, ar, :)
 AR_R="$AR r"
 AC_SUBST(AR_R)
 
